--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>Shopping Card</title>
+    <title>Shopping Cart</title>
   </head>
   <body>
     <div id="root"></div>
